--- a/pom.xml
+++ b/pom.xml
@@ -1,83 +1,111 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>de.htw_berlin.michael_baumert</groupId>
-  <artifactId>tpro</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>TPro</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    
-  	<dependency>
-	 <groupId>com.sun.faces</groupId>
-	 <artifactId>jsf-api</artifactId>
-	 <version>2.2.15</version>
-  	</dependency>
-  	
-  	<dependency>
-	 <groupId>com.sun.faces</groupId>
-	 <artifactId>jsf-impl</artifactId>
-	 <version>2.2.15</version>
-  	</dependency>
-  	
-  	<!-- If you like to use the JSP Standard Tag Library (JSTL);
-  	e.g. xmlns:f="http://xmlns.jcp.org/jsf/core;
-  	Documentation:
-  	http://docs.oracle.com/javaee/5/tutorial/doc/bnakc.html -->
-	<dependency>
-      	<groupId>javax.servlet</groupId>
-      	<artifactId>jstl</artifactId>
-      	<version>1.2</version>
-	</dependency>  	
-	
-	<dependency>
-		<groupId>javax</groupId>
-		<artifactId>javaee-api</artifactId>
-		<version>7.0</version>
-	</dependency>	
-	
-	<dependency>
-		<groupId>javax.el</groupId>
-		<artifactId>el-api</artifactId>
-		<version>2.2.1-b04</version>
-	</dependency>
-	
-	<dependency>
-        <groupId>javax.enterprise</groupId>
-        <artifactId>cdi-api</artifactId>
-        <version>1.2</version>
-        <scope>provided</scope>
-    </dependency>
-	
-	<dependency>
-	    <groupId>org.jboss.weld.servlet</groupId>
-	    <artifactId>weld-servlet</artifactId>
-	    <version>1.1.18.Final</version>
-	    <scope>runtime</scope>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-	<dependency>
-	    <groupId>org.projectlombok</groupId>
-	    <artifactId>lombok</artifactId>
-	    <version>1.16.20</version>
-	    <scope>provided</scope>
-	</dependency>
-		
-	<dependency>
-		<groupId>org.primefaces</groupId>
-		<artifactId>primefaces</artifactId>
-		<version>6.1</version>
-	</dependency>
-  </dependencies>
-  <build>
-    <finalName>TPro</finalName>
-  </build>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>de.htw_berlin.michael_baumert</groupId>
+	<artifactId>tpro</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<name>TPro</name>
+	<url>http://tpro.htw-berlin.de</url>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<repositories>
+		<repository>
+			<id>primefaces</id>
+			<url>http://repository.primefaces.org</url>
+		</repository>
+	</repositories>
+
+	<dependencies>
+		<!-- Mojarra -->
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>2.2.15</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.2.15</version>
+		</dependency>
+
+		<!-- JavaEE dependencies -->
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+			<scope>provided</scope>
+		</dependency>
+<!-- 		<dependency> -->
+<!-- 		<groupId>org.apache.tomee</groupId> -->
+<!-- 		<artifactId>javaee-api</artifactId> -->
+<!-- 		<version>7.0</version> -->
+<!-- 		<scope>provided</scope> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>javax.servlet</groupId> -->
+<!-- 			<artifactId>jstl</artifactId> -->
+<!-- 			<version>1.2</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 		<groupId>javax.el</groupId> -->
+<!-- 		<artifactId>el-api</artifactId> -->
+<!-- 		<version>2.2.1-b04</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 		<groupId>javax.enterprise</groupId> -->
+<!-- 		<artifactId>cdi-api</artifactId> -->
+<!-- 		<version>1.2</version> -->
+<!-- 		<scope>provided</scope> -->
+<!-- 		</dependency> -->
+
+		<!-- Lombok (for reducing boilerplate code) -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.20</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- PrimeFaces dependencies -->
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>all-themes</artifactId>
+			<version>1.0.10</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<finalName>tpro</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.openejb.maven</groupId>
+				<artifactId>tomee-maven-plugin</artifactId>
+				<version>1.7.1</version>
+				<configuration>
+					<tomeeVersion>1.7.1</tomeeVersion>
+					<tomeeClassifier>plume</tomeeClassifier>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
