--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>TPro</name>
+	<name>tpro</name>
 	<url>http://tpro.htw-berlin.de</url>
 
 	<properties>
@@ -22,18 +22,6 @@
 	</repositories>
 
 	<dependencies>
-		<!-- Mojarra -->
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-api</artifactId>
-			<version>2.2.15</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-impl</artifactId>
-			<version>2.2.15</version>
-		</dependency>
-
 		<!-- JavaEE dependencies -->
 		<dependency>
 			<groupId>javax</groupId>
@@ -41,28 +29,13 @@
 			<version>7.0</version>
 			<scope>provided</scope>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 		<groupId>org.apache.tomee</groupId> -->
-<!-- 		<artifactId>javaee-api</artifactId> -->
-<!-- 		<version>7.0</version> -->
-<!-- 		<scope>provided</scope> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>javax.servlet</groupId> -->
-<!-- 			<artifactId>jstl</artifactId> -->
-<!-- 			<version>1.2</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 		<groupId>javax.el</groupId> -->
-<!-- 		<artifactId>el-api</artifactId> -->
-<!-- 		<version>2.2.1-b04</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 		<groupId>javax.enterprise</groupId> -->
-<!-- 		<artifactId>cdi-api</artifactId> -->
-<!-- 		<version>1.2</version> -->
-<!-- 		<scope>provided</scope> -->
-<!-- 		</dependency> -->
+
+		<!-- Database dependencies -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.6</version>
+		</dependency>
 
 		<!-- Lombok (for reducing boilerplate code) -->
 		<dependency>
@@ -95,15 +68,6 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.openejb.maven</groupId>
-				<artifactId>tomee-maven-plugin</artifactId>
-				<version>1.7.1</version>
-				<configuration>
-					<tomeeVersion>1.7.1</tomeeVersion>
-					<tomeeClassifier>plume</tomeeClassifier>
 				</configuration>
 			</plugin>
 		</plugins>
