Migrated back to Tomcat 7
- Application Container Wildfly was "overpowered" because the Servlet Container Tomcat fits all requirements because EJB is not needed

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ target/
 hs_err_pid*
 /src/main/webapp/WEB-INF/.faces-config.xml.jsfdia
 /src/main/java/resources/application.properties
+/deploy.sh
