--- a/pom.xml
+++ b/pom.xml
@@ -104,17 +104,71 @@
 		<!-- Logger -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
+			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.25</version>
 		</dependency>
 
 		<!-- Testing dependencies -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
 		</dependency>
+
+        <dependency>
+		    <groupId>org.jboss.arquillian.junit</groupId>
+		    <artifactId>arquillian-junit-container</artifactId>
+            <version>1.2.1.Final</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+            <groupId>org.jboss.arquillian</groupId>
+            <artifactId>arquillian-bom</artifactId>
+            <version>1.2.1.Final</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        
+		<dependency>
+		    <groupId>org.jboss.arquillian.container</groupId>
+		    <artifactId>arquillian-tomcat-embedded-7</artifactId>
+		    <version>1.0.0.CR10</version>
+		    <scope>test</scope>
+		</dependency>
+		
+	     <dependency>
+	        <groupId>org.apache.tomcat.embed</groupId>
+	        <artifactId>tomcat-embed-core</artifactId>
+	        <version>7.0.19</version>
+	        <scope>provided</scope>
+	     </dependency>
+	     <dependency>
+	        <groupId>org.apache.tomcat.embed</groupId>
+	        <artifactId>tomcat-embed-jasper</artifactId>
+	        <version>7.0.19</version>
+	        <scope>provided</scope>
+	     </dependency>
+	     <dependency>
+	        <groupId>org.apache.tomcat.embed</groupId>
+	        <artifactId>tomcat-embed-logging-juli</artifactId>
+	        <version>7.0.19</version>
+	        <scope>provided</scope>
+	     </dependency>
+	     <dependency>
+	        <groupId>org.eclipse.jdt.core.compiler</groupId>
+	        <artifactId>ecj</artifactId>
+	        <version>3.7</version>
+	        <scope>test</scope>
+	     </dependency>
+	
+	     <!-- Weld servlet for testing CDI injections -->
+	     <dependency>
+	        <groupId>org.jboss.weld.servlet</groupId>
+	        <artifactId>weld-servlet</artifactId>
+	        <version>2.4.6.Final</version>
+	        <scope>test</scope>
+	     </dependency>
 	</dependencies>
 
 	<build>
@@ -130,13 +184,20 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<url>http://localhost:8080/manager/text</url>
-				</configuration>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.20.1</version>
 			</plugin>
+<!-- 			<plugin> -->
+<!-- 	            <artifactId>maven-resources-plugin</artifactId> -->
+<!-- 	            <configuration> -->
+<!-- 	                <nonFilteredFileExtensions> -->
+<!-- 	                    <nonFilteredFileExtension>js</nonFilteredFileExtension> -->
+<!-- 	                    <nonFilteredFileExtension>css</nonFilteredFileExtension> -->
+<!-- 	                    <nonFilteredFileExtension>psd</nonFilteredFileExtension> -->
+<!-- 	                    <nonFilteredFileExtension>ico</nonFilteredFileExtension> -->
+<!-- 	                </nonFilteredFileExtensions> -->
+<!-- 	            </configuration> -->
+<!-- 	        </plugin> -->
 		</plugins>
 	</build>
 </project>
