--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,10 +16,11 @@
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
-  
+
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.jsf</url-pattern>
+    <url-pattern>/javax.faces.resource/*</url-pattern>
   </servlet-mapping>
   
   <context-param>
@@ -36,6 +37,27 @@
       <param-name>primefaces.THEME</param-name>
       <param-value>south-street</param-value>
   </context-param>
+  
+  <mime-mapping>
+      <extension>ttf</extension>
+      <mime-type>css/fonts</mime-type>
+    </mime-mapping>
+    <mime-mapping>
+      <extension>otf</extension>
+      <mime-type>font/opentype</mime-type>
+    </mime-mapping>
+    <mime-mapping>
+      <extension>woff2</extension>
+      <mime-type>font/woff2</mime-type>
+    </mime-mapping>  
+    <mime-mapping>
+      <extension>woff</extension>
+      <mime-type>font/woff</mime-type>
+    </mime-mapping>  
+    <mime-mapping>
+      <extension>eot</extension>
+      <mime-type>application/vnd.ms-fontobject</mime-type>
+    </mime-mapping>
   
   <resource-env-ref>
     <resource-env-ref-name>BeanManager</resource-env-ref-name>
