--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
   
   <context-param>
       <param-name>primefaces.THEME</param-name>
-      <param-value>south-street</param-value>
+      <param-value>bootstrap</param-value>
   </context-param>
   
   <mime-mapping>
