--- a/pom.xml
+++ b/pom.xml
@@ -46,21 +46,11 @@
 			<version>1.2</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.el</groupId>
-			<artifactId>el-api</artifactId>
-			<version>2.2.1-b04</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.enterprise</groupId>
-			<artifactId>cdi-api</artifactId>
-			<version>2.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-		    <groupId>org.jboss.weld.servlet</groupId>
-		    <artifactId>weld-servlet-shaded</artifactId>
-		    <version>3.0.2.Final</version>
-		</dependency>
+	        <groupId>org.jboss.weld.servlet</groupId>
+	        <artifactId>weld-servlet-core</artifactId>
+	        <version>3.0.3.Final</version>
+	        <scope>runtime</scope>
+	     </dependency>
 		
 		<!-- Hibernate (JPA) -->
 		<dependency>
@@ -84,6 +74,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>6.0.6</version>
+			<!--scope>runtime</scope-->
 		</dependency>
 
 		<!-- Lombok (for reducing boilerplate code) -->
@@ -111,13 +102,6 @@
 		    <version>2.6.8</version>
 		</dependency>
 
-		<!-- Logger -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.25</version>
-		</dependency>
-
 		<!-- Testing dependencies -->
 		<dependency>
 		    <groupId>junit</groupId>
@@ -125,13 +109,8 @@
 		    <version>4.12</version>
 		    <scope>test</scope>
 		</dependency>
-
-        <dependency>
-		    <groupId>org.jboss.arquillian.junit</groupId>
-		    <artifactId>arquillian-junit-container</artifactId>
-            <version>1.2.1.Final</version>
-		    <scope>test</scope>
-		</dependency>
+		
+		<!-- Arquillian API -->
 		<dependency>
             <groupId>org.jboss.arquillian</groupId>
             <artifactId>arquillian-bom</artifactId>
@@ -139,47 +118,42 @@
             <type>pom</type>
             <scope>import</scope>
         </dependency>
-        
-		<dependency>
-		    <groupId>org.jboss.arquillian.container</groupId>
-		    <artifactId>arquillian-tomcat-embedded-7</artifactId>
-		    <version>1.0.0.CR10</version>
+        <dependency>
+		    <groupId>org.jboss.arquillian.junit</groupId>
+		    <artifactId>arquillian-junit-container</artifactId>
+            <version>1.2.1.Final</version>
 		    <scope>test</scope>
 		</dependency>
-		
-	     <dependency>
-	        <groupId>org.apache.tomcat.embed</groupId>
-	        <artifactId>tomcat-embed-core</artifactId>
-	        <version>7.0.19</version>
-	        <scope>provided</scope>
-	     </dependency>
-	     <dependency>
-	        <groupId>org.apache.tomcat.embed</groupId>
-	        <artifactId>tomcat-embed-jasper</artifactId>
-	        <version>7.0.19</version>
-	        <scope>provided</scope>
-	     </dependency>
-	     <dependency>
-	        <groupId>org.apache.tomcat.embed</groupId>
-	        <artifactId>tomcat-embed-logging-juli</artifactId>
-	        <version>7.0.19</version>
-	        <scope>provided</scope>
-	     </dependency>
-	     <dependency>
-	        <groupId>org.eclipse.jdt.core.compiler</groupId>
-	        <artifactId>ecj</artifactId>
-	        <version>3.7</version>
-	        <scope>test</scope>
-	     </dependency>
-	
-	     <!-- Weld servlet for testing CDI injections -->
-	     <dependency>
-	        <groupId>org.jboss.weld.servlet</groupId>
-	        <artifactId>weld-servlet</artifactId>
-	        <version>2.4.6.Final</version>
-	        <scope>test</scope>
-	     </dependency>
+		<!-- Arquillian container (Weld EE embedded) -->
+		<dependency>
+            <groupId>org.jboss.arquillian.container</groupId>
+            <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+            <version>1.0.0.CR9</version>
+            <scope>test</scope>
+        </dependency>
+
+		<!-- Logger -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.25</version>
+		</dependency>  
 	</dependencies>
+	
+	<!-- To define multiple containers for arquillian test execution you can use maven profiles (see example below) -->
+	<!-- profiles>
+		<profile>
+	        <id>arquillian-weld-ee-embedded</id>
+	        <dependencies>
+		        <dependency>
+		            <groupId>org.jboss.arquillian.container</groupId>
+		            <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+		            <version>1.0.0.CR9</version>
+		            <scope>test</scope>
+		        </dependency>
+	        </dependencies>
+	    </profile>
+	</profiles-->
 
 	<build>
 		<finalName>tpro</finalName>
@@ -197,17 +171,18 @@
 			    <artifactId>maven-surefire-plugin</artifactId>
 			    <version>2.20.1</version>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 	            <artifactId>maven-resources-plugin</artifactId> -->
-<!-- 	            <configuration> -->
-<!-- 	                <nonFilteredFileExtensions> -->
-<!-- 	                    <nonFilteredFileExtension>js</nonFilteredFileExtension> -->
-<!-- 	                    <nonFilteredFileExtension>css</nonFilteredFileExtension> -->
-<!-- 	                    <nonFilteredFileExtension>psd</nonFilteredFileExtension> -->
-<!-- 	                    <nonFilteredFileExtension>ico</nonFilteredFileExtension> -->
-<!-- 	                </nonFilteredFileExtensions> -->
-<!-- 	            </configuration> -->
-<!-- 	        </plugin> -->
+			<!-- Could be useful later on -->
+			<!-- plugin>
+	            <artifactId>maven-resources-plugin</artifactId>
+	            <configuration>
+	                <nonFilteredFileExtensions>
+	                    <nonFilteredFileExtension>js</nonFilteredFileExtension>
+	                    <nonFilteredFileExtension>css</nonFilteredFileExtension>
+	                    <nonFilteredFileExtension>psd</nonFilteredFileExtension>
+	                    <nonFilteredFileExtension>ico</nonFilteredFileExtension>
+	                </nonFilteredFileExtensions>
+	            </configuration>
+	        </plugin-->
 		</plugins>
 	</build>
 </project>
