--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
       - image: circleci/mysql:5.7.21
+        environment:
+        - MYSQL_USER=tpro
+        - MYSQL_PASSWORD=tpro
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -22,6 +25,8 @@ jobs:
       MAVEN_OPTS: -Xmx3200m
     
     steps:
+      - mysql -utpro -ptpro -e 'CREATE DATABASE test_tpro_user_management'
+
       - checkout
 
       # Download and cache dependencies
