--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,10 @@ jobs:
       MAVEN_OPTS: -Xmx3200m
     
     steps:
-      - run: mysql -utpro -ptpro -e 'CREATE DATABASE test_tpro_user_management'
+     - run:
+        # Add a password to the `ubuntu` user, since Postgres is configured to
+        # always ask for a password without sudo, and fails without one.
+       command: sudo -u mysql mysql -utpro -ptpro -e 'CREATE DATABASE test_tpro_user_management;'
 
       - checkout
 
