MySQL user tpro has empty Password

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,11 @@ jobs:
       - image: circleci/openjdk:8-jdk
       - image: circleci/mysql:5.7.21
         environment:
+        - MYSQL_ALLOW_EMPTY_PASSWORD=true 
+        - MYSQL_DATABASE=test_tpro_user_management 
+        - MYSQL_HOST=127.0.0.1 
+        - MYSQL_ROOT_HOST=% 
         - MYSQL_USER=tpro
-        - MYSQL_PASSWORD=tpro
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -25,10 +28,6 @@ jobs:
       MAVEN_OPTS: -Xmx3200m
     
     steps:
-      - run:
-          # Add a password to the `ubuntu` user, since Postgres is configured to
-          # always ask for a password without sudo, and fails without one.
-          command: mysql -utpro -ptpro -e 'CREATE DATABASE test_tpro_user_management;'
 
       - checkout
 
