--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
         - MYSQL_HOST=127.0.0.1 
         - MYSQL_ROOT_HOST=% 
         - MYSQL_USER=tpro
+        - MYSQL_PASSWORD=tpro
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
