--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,17 @@ jobs:
           key: tpro-core-{{ checksum "pom.xml" }}
         
       - run: mvn package
+
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+          when: always
       
       - store_test_results:
-          path: target/surefire-reports
-      
+          path: ~/junit
+
       - store_artifacts:
+          path: ~/junit  
           path: target/tpro.war
