Added version to tpro.war

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,4 +52,4 @@ jobs:
           path: target/surefire-reports
       
       - store_artifacts:
-          path: target/tpro.war
+          path: target/*.war
