--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,4 +52,4 @@ jobs:
           path: target/surefire-reports
       
       - store_artifacts:
-          path: target/*.war
+          path: target/tpro-0.0.1-SNAPSHOT.war
