--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
             - ~/.m2
           key: tpro-core-{{ checksum "pom.xml" }}
         
-      - run: mvn package
+      - run: mvn install
       
       - store_test_results:
           path: target/surefire-reports
