--- a/tpro-plugins/bookstore-plugin/pom.xml
+++ b/tpro-plugins/bookstore-plugin/pom.xml
@@ -32,21 +32,13 @@
 				</configuration>
 			</plugin>
 			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-jar-plugin</artifactId>
+		    </plugin>
+			<plugin>
 			    <artifactId>maven-surefire-plugin</artifactId>
 			    <version>2.20.1</version>
 			</plugin>
-			<!-- Could be useful later on -->
-			<!-- plugin>
-	            <artifactId>maven-resources-plugin</artifactId>
-	            <configuration>
-	                <nonFilteredFileExtensions>
-	                    <nonFilteredFileExtension>js</nonFilteredFileExtension>
-	                    <nonFilteredFileExtension>css</nonFilteredFileExtension>
-	                    <nonFilteredFileExtension>psd</nonFilteredFileExtension>
-	                    <nonFilteredFileExtension>ico</nonFilteredFileExtension>
-	                </nonFilteredFileExtensions>
-	            </configuration>
-	        </plugin-->
 		</plugins>
 	</build>
 </project>
