--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,6 @@ jobs:
     environment:
       # Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
-
-    dependencies:
-      override: 
-        - mvn install -DskipTests 
     
     steps:
 
@@ -43,14 +39,14 @@ jobs:
           # fallback to using the latest cache if no exact match is found
             - tpro-core-
 
-      - run: mvn dependency:go-offline
+      - run: mvn dependency:go-offline -DskipTests 
 
       - save_cache:
           paths:
             - ~/.m2
           key: tpro-core-{{ checksum "pom.xml" }}
         
-      - run: mvn package
+      - run: mvn package dependency:go-offline
       
       - store_test_results:
           path: target/surefire-reports
