Set up test summary

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
       - run: mvn package
       
       - store_test_results:
-          path: .
+          path: ~/tpro-core
       
       - store_artifacts:
           path: tpro-app/target/tpro-app-0.0.1-SNAPSHOT.war
