Updated circleci configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,8 @@ jobs:
           # fallback to using the latest cache if no exact match is found
             - tpro-
 
+      - run: mvn dependency:go-offline -DskipTests # remove -DskipTests when mysql client can execute db init scripts in mysql container
+
       # If tests should be executed in different test dbs then you need to setup a mysql
       # client to connect to the mysql server within the docker container i.e. like below
       # - run: sudo apt install -y mysql-client
@@ -51,7 +53,7 @@ jobs:
             - ~/.m2
           key: tpro-{{ checksum "pom.xml" }}
         
-      - run: mvn install -DskipTests # remove -DskipTests when mysql client can execute db init scripts in mysql container
+      - run: mvn package -DskipTests # remove -DskipTests when mysql client can execute db init scripts in mysql container
       
       - store_test_results:
           path: ~/tpro
