--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,16 +15,14 @@ jobs:
       # - image: circleci/postgres:9.4
       - image: circleci/mysql:5.7.21
         environment:
-          - MYSQL_ALLOW_EMPTY_PASSWORD=true 
-          - MYSQL_DATABASE=tpro_test_user_management 
-          - MYSQL_HOST=127.0.0.1 
-          - MYSQL_ROOT_HOST=% 
-          - MYSQL_USER=tpro
-          - MYSQL_PASSWORD=tpro
-        volumes:
-          -  
+        - MYSQL_ALLOW_EMPTY_PASSWORD=true 
+        - MYSQL_DATABASE=tpro_test 
+        - MYSQL_HOST=127.0.0.1 
+        - MYSQL_ROOT_HOST=% 
+        - MYSQL_USER=tpro
+        - MYSQL_PASSWORD=tpro
 
-    working_directory: ~/tpro
+    working_directory: ~/tpro-core
 
     environment:
       # Customize the JVM maximum heap limit
@@ -37,24 +35,21 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - tpro-{{ checksum "pom.xml" }}
+            - tpro-core-{{ checksum "pom.xml" }}
           # fallback to using the latest cache if no exact match is found
-            - tpro-
+            - tpro-core-
 
-      # If tests should be executed in different test dbs then you need to setup a mysql
-      # client to connect to the mysql server within the docker container i.e. like below
-      # - run: sudo apt install -y mysql-client
-      # - run: bash scripts/prepare_tpro_test_dbs_for_ci.sh
+      #- run: mvn dependency:go-offline
 
       - save_cache:
           paths:
             - ~/.m2
-          key: tpro-{{ checksum "pom.xml" }}
+          key: tpro-core-{{ checksum "pom.xml" }}
         
-      - run: mvn package 
+      - run: mvn package
       
       - store_test_results:
-          path: ~/tpro
+          path: target/surefire-reports
       
       - store_artifacts:
           path: tpro-app/target/tpro-app-0.0.1-SNAPSHOT.war
