--- a/tpro-app/pom.xml
+++ b/tpro-app/pom.xml
@@ -15,6 +15,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>tpro-app</name>
+	<url>https://tpro.htw-berlin.de</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -52,7 +53,7 @@
 	    </dependency>
 		<dependency>
 			<groupId>de.htw_berlin.michael_baumert</groupId>
-			<artifactId>bookstore-plugin</artifactId>
+			<artifactId>tpro-plugin-bookstore</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
