--- a/tpro-plugins/tpro-plugin-bookstore/pom.xml
+++ b/tpro-plugins/tpro-plugin-bookstore/pom.xml
@@ -8,12 +8,12 @@
 	</parent>
 	
 	<groupId>de.htw_berlin.michael_baumert</groupId>
-	<artifactId>bookstore-plugin</artifactId>
+	<artifactId>tpro-plugin-bookstore</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>bookstore-plugin</name>
-	<url>http://tpro.htw-berlin.de/bookstore</url>
+	<name>tpro-plugin-bookstore</name>
+	<url>https://tpro.htw-berlin.de/bookstore</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
