--- a/tpro-plugins/pom.xml
+++ b/tpro-plugins/pom.xml
@@ -21,6 +21,11 @@
   <dependencies>
     <dependency>
       <groupId>de.htw_berlin.michael_baumert</groupId>
+      <artifactId>tpro-plugin-framework</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>de.htw_berlin.michael_baumert</groupId>
       <artifactId>tpro-user-management</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
@@ -28,5 +33,6 @@
 
   <modules>
     <module>tpro-plugin-bookstore</module>
+    <module>tpro-plugin-hello-user-solution</module>
   </modules>
 </project>
